@@ -31,7 +31,6 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 
 import java.time.LocalDate;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
@@ -61,8 +60,7 @@ class ExhibitionServiceTest {
     @DisplayName("다가오는 전시회 조회 테스트")
     void testGetUpcomingExhibitions() {
         pageRequest = PageRequest.of(0, 1);
-        List<ExhibitionForSimpleQuery> exhibitions = new ArrayList<>();
-        exhibitions.add(ExhibitionForSimpleQuery.builder()
+        Page<ExhibitionForSimpleQuery> exhibitionsPagingResult = new PageImpl(List.of(ExhibitionForSimpleQuery.builder()
                 .id(11L)
                 .name("요리조리 MOKA Garden")
                 .thumbnail("http://www.culture.go.kr/upload/rdf/22/07/show_2022071411402126915.png")
@@ -70,12 +68,10 @@ class ExhibitionServiceTest {
                 .period(new Period(LocalDate.now().plusDays(1), LocalDate.now().plusDays(10)))
                 .likeCount(30)
                 .reviewCount(15)
-                .build());
-        Page<ExhibitionForSimpleQuery> exhibitionsPagingResult = new PageImpl(exhibitions);
+                .build()));
 
         // given
-        when(exhibitionRepository.findUpcomingExhibitions(null, pageRequest))
-                .thenReturn(exhibitionsPagingResult);
+        when(exhibitionRepository.findUpcomingExhibitions(null, pageRequest)).thenReturn(exhibitionsPagingResult);
 
         // when
         exhibitionService.getUpcomingExhibitions(null, pageRequest);
@@ -88,8 +84,7 @@ class ExhibitionServiceTest {
     @DisplayName("인기 많은 전시회 조회 테스트")
     void testGetMostLikeExhibitions() {
         pageRequest = PageRequest.of(0, 1);
-        List<ExhibitionForSimpleQuery> exhibitions = new ArrayList<>();
-        exhibitions.add(ExhibitionForSimpleQuery.builder()
+        Page<ExhibitionForSimpleQuery> exhibitionsPagingResult = new PageImpl(List.of(ExhibitionForSimpleQuery.builder()
                 .id(11L)
                 .name("요리조리 MOKA Garden")
                 .thumbnail("http://www.culture.go.kr/upload/rdf/22/07/show_2022071411402126915.png")
@@ -97,12 +92,10 @@ class ExhibitionServiceTest {
                 .period(new Period(LocalDate.now().plusDays(1), LocalDate.now().plusDays(10)))
                 .likeCount(30)
                 .reviewCount(15)
-                .build());
-        Page<ExhibitionForSimpleQuery> exhibitionsPagingResult = new PageImpl(exhibitions);
+                .build()));
 
         // given
-        when(exhibitionRepository.findMostLikeExhibitions(null, true, pageRequest))
-                .thenReturn(exhibitionsPagingResult);
+        when(exhibitionRepository.findMostLikeExhibitions(null, true, pageRequest)).thenReturn(exhibitionsPagingResult);
 
         // when
         exhibitionService.getMostLikeExhibitions(null, true, pageRequest);
@@ -114,6 +107,8 @@ class ExhibitionServiceTest {
     @Nested
     @DisplayName("getExhibition() 테스트")
     class GetExhibitionTest {
+        private Long userId = 321L;
+        private Long exhibitionId = 123L;
 
         private User user = new User("test@example.com", "Emily", List.of(new Role(Authority.USER)));
 
@@ -136,21 +131,18 @@ class ExhibitionServiceTest {
                 .placeUrl("https://www.place-example.com")
                 .build();
 
-        private Long userId = 321L;
-        private Long exhibitionId = 123L;
         private ExhibitionDetailForSimpleQuery exhibitionDetail1 = ExhibitionDetailForSimpleQuery.builder()
                 .id(exhibitionId)
                 .seq(12345)
                 .name("전시회 제목")
                 .period(new Period(LocalDate.now(), LocalDate.now().plusDays(1)))
-                .location(
-                        Location.builder()
-                                .latitude(123.321)
-                                .longitude(123.123)
-                                .area(GYEONGGI)
-                                .place("전시관")
-                                .address("경기도 용인시 수지구")
-                                .build()
+                .location(Location.builder()
+                        .latitude(123.321)
+                        .longitude(123.123)
+                        .area(GYEONGGI)
+                        .place("전시관")
+                        .address("경기도 용인시 수지구")
+                        .build()
                 )
                 .inquiry("010-0000-0000")
                 .fee("1,000원")
@@ -167,14 +159,13 @@ class ExhibitionServiceTest {
                 .seq(12346)
                 .name("전시회 제목2")
                 .period(new Period(LocalDate.now(), LocalDate.now().plusDays(1)))
-                .location(
-                        Location.builder()
-                                .latitude(123.321)
-                                .longitude(123.123)
-                                .area(GYEONGGI)
-                                .place("전시관")
-                                .address("경기도 용인시 수지구")
-                                .build()
+                .location(Location.builder()
+                        .latitude(123.321)
+                        .longitude(123.123)
+                        .area(GYEONGGI)
+                        .place("전시관")
+                        .address("경기도 용인시 수지구")
+                        .build()
                 )
                 .inquiry("010-0000-0000")
                 .fee("1,000원")
@@ -184,30 +175,23 @@ class ExhibitionServiceTest {
                 .reviewCount(5)
                 .build();
 
-        Review review = new Review(user,
-                exhibition,
-                "리뷰 내용",
-                "리뷰 제목",
-                LocalDate.now(),
-                true);
+        Review review = new Review(user, exhibition, "리뷰 내용", "리뷰 제목", LocalDate.now(), true);
 
-        List<ReviewsResponseForExhibitionDetail> reviews = Arrays.asList(
-                ReviewsResponseForExhibitionDetail.builder()
-                        .reviewId(1L)
-                        .user(new ReviewUserInfo(user))
-                        .date(review.getDate())
-                        .title(review.getTitle())
-                        .content(review.getContent())
-                        .createdAt(review.getCreatedAt())
-                        .updatedAt(review.getUpdatedAt())
-                        .isEdited(false)
-                        .isPublic(review.getIsPublic())
-                        .isLiked(true)
-                        .likeCount(1L)
-                        .commentCount(0L)
-                        .photos(Arrays.asList(new ReviewPhotoInfo(
-                                new ReviewPhoto(review, "https://www.review-photo-path"))))
-                        .build());
+        List<ReviewsResponseForExhibitionDetail> reviews = List.of(ReviewsResponseForExhibitionDetail.builder()
+                .reviewId(1L)
+                .user(new ReviewUserInfo(user))
+                .date(review.getDate())
+                .title(review.getTitle())
+                .content(review.getContent())
+                .createdAt(review.getCreatedAt())
+                .updatedAt(review.getUpdatedAt())
+                .isEdited(false)
+                .isPublic(review.getIsPublic())
+                .isLiked(true)
+                .likeCount(1L)
+                .commentCount(0L)
+                .photos(Arrays.asList(new ReviewPhotoInfo(new ReviewPhoto(review, "https://www.review-photo-path"))))
+                .build());
 
         @Test
         @DisplayName("존재하지 않는 게시물인 경우")
@@ -224,10 +208,8 @@ class ExhibitionServiceTest {
         @Test
         @DisplayName("인증된 사용자이며 좋아요를 누른 경우")
         void testAuthorizedLike() {
-            when(exhibitionRepository.findExhibition(userId, exhibitionId))
-                    .thenReturn(Optional.of(exhibitionDetail1));
-            when(reviewService.getReviewsForExhibition(userId, exhibitionId))
-                    .thenReturn(reviews);
+            when(exhibitionRepository.findExhibition(userId, exhibitionId)).thenReturn(Optional.of(exhibitionDetail1));
+            when(reviewService.getReviewsForExhibition(userId, exhibitionId)).thenReturn(reviews);
 
             exhibitionService.getExhibition(userId, exhibitionId);
 
@@ -238,10 +220,8 @@ class ExhibitionServiceTest {
         @Test
         @DisplayName("인증된 사용자이며 좋아요를 누르지 않은 경우")
         void testAuthorizedNotLike() {
-            when(exhibitionRepository.findExhibition(null, exhibitionId))
-                    .thenReturn(Optional.of(exhibitionDetail2));
-            when(reviewService.getReviewsForExhibition(null, exhibitionId))
-                    .thenReturn(reviews);
+            when(exhibitionRepository.findExhibition(null, exhibitionId)).thenReturn(Optional.of(exhibitionDetail2));
+            when(reviewService.getReviewsForExhibition(null, exhibitionId)).thenReturn(reviews);
 
             exhibitionService.getExhibition(null, exhibitionId);
 
@@ -255,9 +235,10 @@ class ExhibitionServiceTest {
     void testGetUserLikeExhibitions() {
         Long userId = 1L;
         Long exhibitionLikeUserId = 2L;
+
         pageRequest = PageRequest.of(0, 1);
-        List<ExhibitionForSimpleQuery> exhibitions = new ArrayList<>();
-        exhibitions.add(ExhibitionForSimpleQuery.builder()
+        
+        Page<ExhibitionForSimpleQuery> exhibitionsPagingResult = new PageImpl(List.of(ExhibitionForSimpleQuery.builder()
                 .id(11L)
                 .name("요리조리 MOKA Garden")
                 .thumbnail("http://www.culture.go.kr/upload/rdf/22/07/show_2022071411402126915.png")
@@ -265,8 +246,7 @@ class ExhibitionServiceTest {
                 .period(new Period(LocalDate.now().plusDays(1), LocalDate.now().plusDays(10)))
                 .likeCount(30)
                 .reviewCount(15)
-                .build());
-        Page<ExhibitionForSimpleQuery> exhibitionsPagingResult = new PageImpl(exhibitions);
+                .build()));
 
         // given
         when(exhibitionRepository.findUserLikeExhibitions(userId, exhibitionLikeUserId, pageRequest))
@@ -327,21 +307,18 @@ class ExhibitionServiceTest {
         @Test
         @DisplayName("사용자 주변에 있는 전시회 조회 테스트")
         void testGetExhibitionsAroundMe() {
-            List<ExhibitionWithLocationForSimpleQuery> exhibitions = Arrays.asList(
-                    ExhibitionWithLocationForSimpleQuery.builder()
-                            .id(11L)
-                            .name("요리조리 MOKA Garden")
-                            .thumbnail("http://www.culture.go.kr/upload/rdf/22/07/show_2022071411402126915.png")
-                            .isLiked(true)
-                            .period(new Period(LocalDate.now().plusDays(1), LocalDate.now().plusDays(10)))
-                            .likeCount(30)
-                            .reviewCount(15)
-                            .location(new Location(30.12, 128.12, SEOUL, "서울 어딘가 전시관", "서울특별시 마포구"))
-                            .build()
-            );
+            List<ExhibitionWithLocationForSimpleQuery> exhibitions = List.of(ExhibitionWithLocationForSimpleQuery.builder()
+                    .id(11L)
+                    .name("요리조리 MOKA Garden")
+                    .thumbnail("http://www.culture.go.kr/upload/rdf/22/07/show_2022071411402126915.png")
+                    .isLiked(true)
+                    .period(new Period(LocalDate.now().plusDays(1), LocalDate.now().plusDays(10)))
+                    .likeCount(30)
+                    .reviewCount(15)
+                    .location(new Location(30.12, 128.12, SEOUL, "서울 어딘가 전시관", "서울특별시 마포구"))
+                    .build());
 
-            when(exhibitionRepository.findExhibitionsAroundMe(null, 35.12, 128.12, 3))
-                    .thenReturn(exhibitions);
+            when(exhibitionRepository.findExhibitionsAroundMe(null, 35.12, 128.12, 3)).thenReturn(exhibitions);
 
             exhibitionService.getExhibitionsAroundMe(null, 35.12, 128.12, 3);
 
